--- a/index.html
+++ b/index.html
@@ -1,133 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Signal Sync</title>
-<style>
-body {
-  background: black;
-  color: white;
-  font-family: 'Press Start 2P', monospace;
-  text-align: center;
-  padding: 20px;
-}
-
-#gameCanvas {
-  border: 3px solid white;
-  margin: 20px auto;
-  display: block;
-  background-color: #111;
-}
-
-#instruction {
-  font-size: 10px;
-  margin-top: 16px;
-  color: #87cefa;
-}
-
-#round {
-  margin-top: 10px;
-  font-size: 10px;
-  color: #ffeb3b;
-}
-
-button {
-  background: none;
-  border: 2px solid white;
-  color: white;
-  font-family: 'Press Start 2P', monospace;
-  font-size: 10px;
-  padding: 8px;
-  margin-top: 16px;
-  cursor: pointer;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Signal Sync</title>
+  <style>
+    body {
+      background: black;
+      color: white;
+      font-family: 'Press Start 2P', monospace;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+    }
+    canvas {
+      image-rendering: pixelated;
+      background: #111;
+      display: block;
+      margin: 20px auto;
+      border: 3px solid white;
+    }
+    #instruction {
+      font-size: 10px;
+      margin-top: 10px;
+      color: #87cefa;
+      text-align: center;
+    }
+    #round {
+      color: #ffeb3b;
+      font-size: 10px;
+      margin-top: 20px;
+    }
+    #finalMessage {
+      display: none;
+      font-size: 12px;
+      color: #ffeb3b;
+      margin-top: 30px;
+      max-width: 80%;
+      text-align: center;
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-<h2>SIGNAL SYNC</h2>
-<canvas id="gameCanvas" width="300" height="150"></canvas>
-<div id="round">Round 1</div>
-<div id="instruction">Press SPACE when the dot aligns with the center line!</div>
-<button onclick="startGame()">Start</button>
+  <canvas id="game" width="400" height="100"></canvas>
+  <div id="round">Round 1 / 3</div>
+  <div id="instruction">Press SPACE when the arrow hits the middle bar!</div>
+  <div id="finalMessage"></div>
+  <audio id="hitSound" src="https://www.fesliyanstudios.com/play-mp3/387" preload="auto"></audio>
 
-<audio id="blip" src="https://www.fesliyanstudios.com/play-mp3/387" preload="auto"></audio>
-<audio id="winSound" src="https://www.fesliyanstudios.com/play-mp3/6675" preload="auto"></audio>
+  <script>
+    const canvas = document.getElementById("game");
+    const ctx = canvas.getContext("2d");
+    const sound = document.getElementById("hitSound");
+    const rounds = [
+      { speed: 2, arrows: 5 },
+      { speed: 3, arrows: 7 },
+      { speed: 4, arrows: 9 }
+    ];
+    let currentRound = 0;
+    let arrows = [];
+    let frame = 0;
+    let hits = 0;
+    let total = 0;
+    let playing = true;
 
-<script>
-const canvas = document.getElementById("gameCanvas");
-const ctx = canvas.getContext("2d");
-const blip = document.getElementById("blip");
-const winSound = document.getElementById("winSound");
+    function spawnArrow() {
+      const side = Math.random() > 0.5 ? "left" : "right";
+      arrows.push({ x: side === "left" ? 0 : 400, dir: side === "left" ? 1 : -1 });
+    }
 
-let rounds = [
-  { speed: 2, tolerance: 15, msg: "Press SPACE when the dot aligns with the center line!" },
-  { speed: 3.5, tolerance: 10, msg: "The pace is faster now. Time it just right!" },
-  { speed: 5, tolerance: 6, msg: "Final sync. Trust your instinct." }
-];
+    function draw() {
+      ctx.clearRect(0, 0, 400, 100);
+      ctx.fillStyle = "white";
+      ctx.fillRect(195, 0, 10, 100); // Middle zone
 
-let currentRound = 0;
-let x = 0;
-let direction = 1;
-let running = false;
-let success = false;
+      arrows.forEach(a => {
+        ctx.fillStyle = "cyan";
+        ctx.beginPath();
+        ctx.moveTo(a.x, 50);
+        ctx.lineTo(a.x + (a.dir * -10), 40);
+        ctx.lineTo(a.x + (a.dir * -10), 60);
+        ctx.fill();
+      });
+    }
 
-function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  ctx.fillStyle = "white";
-  ctx.fillRect(canvas.width / 2 - 2, 0, 4, canvas.height); // center line
+    function update() {
+      if (!playing) return;
 
-  ctx.beginPath();
-  ctx.arc(x, canvas.height / 2, 10, 0, 2 * Math.PI);
-  ctx.fillStyle = "cyan";
-  ctx.fill();
+      arrows.forEach(a => a.x += a.dir * rounds[currentRound].speed);
+      arrows = arrows.filter(a => a.x > -20 && a.x < 420);
+      frame++;
 
-  if (running) {
-    x += rounds[currentRound].speed * direction;
-    if (x > canvas.width - 10 || x < 10) direction *= -1;
-    requestAnimationFrame(draw);
-  }
-}
+      if (frame % 60 === 0 && total < rounds[currentRound].arrows) {
+        spawnArrow();
+        total++;
+      }
 
-function startGame() {
-  document.querySelector("button").style.display = "none";
-  document.getElementById("round").innerText = `Round ${currentRound + 1}`;
-  document.getElementById("instruction").innerText = rounds[currentRound].msg;
-  x = 10;
-  direction = 1;
-  success = false;
-  running = true;
-  draw();
-}
+      if (hits >= rounds[currentRound].arrows) {
+        nextRound();
+      }
+    }
 
-window.addEventListener("keydown", (e) => {
-  if (!running || success) return;
-  if (e.code === "Space") {
-    const center = canvas.width / 2;
-    const tolerance = rounds[currentRound].tolerance;
-    if (Math.abs(x - center) < tolerance) {
-      blip.currentTime = 0;
-      blip.play();
-      success = true;
-      running = false;
+    function loop() {
+      update();
+      draw();
+      requestAnimationFrame(loop);
+    }
+
+    function nextRound() {
+      playing = false;
       setTimeout(() => {
         currentRound++;
         if (currentRound < rounds.length) {
-          document.querySelector("button").innerText = "Next Round";
-          document.querySelector("button").style.display = "inline-block";
+          document.getElementById("round").textContent = `Round ${currentRound + 1} / 3`;
+          arrows = [];
+          hits = 0;
+          total = 0;
+          playing = true;
         } else {
-          document.getElementById("round").innerText = "★ All rounds synced! You're in tune. ★";
-          document.getElementById("instruction").innerText = "Thank you for listening. I'm here.";
-          winSound.play();
+          endGame();
         }
-      }, 500);
-    } else {
-      document.getElementById("instruction").innerText = "Missed it! Wait for the next pass...";
-      setTimeout(() => {
-        document.getElementById("instruction").innerText = rounds[currentRound].msg;
-      }, 1200);
+      }, 1000);
     }
-  }
-});
-</script>
+
+    function endGame() {
+      canvas.style.display = "none";
+      document.getElementById("instruction").style.display = "none";
+      document.getElementById("round").style.display = "none";
+      typeText("finalMessage", "* You’re finally in sync.\n* I'm here.");
+    }
+
+    function typeText(id, text, speed = 50) {
+      const el = document.getElementById(id);
+      el.style.display = "block";
+      let i = 0;
+      function type() {
+        if (i < text.length) {
+          el.textContent += text.charAt(i);
+          i++;
+          setTimeout(type, text.charAt(i - 1) === " " ? speed / 2 : speed);
+        }
+      }
+      type();
+    }
+
+    document.addEventListener("keydown", e => {
+      if (e.code === "Space") {
+        const center = arrows.find(a => Math.abs(a.x - 200) < 15);
+        if (center) {
+          sound.currentTime = 0;
+          sound.play();
+          hits++;
+          arrows.splice(arrows.indexOf(center), 1);
+        }
+      }
+    });
+
+    loop();
+  </script>
 </body>
 </html>
