--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
       font-size: 10px;
       margin-top: 20px;
     }
-    #finalMessage {
+    #finalMessage, #errorMessage {
       display: none;
       font-size: 12px;
-      color: #ffeb3b;
+      color: #ff4d4d;
       margin-top: 30px;
       max-width: 80%;
       text-align: center;
+      white-space: pre-wrap;
+    }
+    #finalMessage {
+      color: #ffeb3b;
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -48,6 +52,7 @@
   <canvas id="game" width="400" height="100"></canvas>
   <div id="round">Round 1 / 3</div>
   <div id="instruction">Press SPACE when the arrow hits the middle bar!</div>
+  <div id="errorMessage"></div>
   <div id="finalMessage"></div>
   <audio id="hitSound" src="https://www.fesliyanstudios.com/play-mp3/387" preload="auto"></audio>
 
@@ -55,11 +60,14 @@
     const canvas = document.getElementById("game");
     const ctx = canvas.getContext("2d");
     const sound = document.getElementById("hitSound");
+    const errorEl = document.getElementById("errorMessage");
+
     const rounds = [
       { speed: 2, arrows: 5 },
       { speed: 3, arrows: 7 },
       { speed: 4, arrows: 9 }
     ];
+
     let currentRound = 0;
     let arrows = [];
     let frame = 0;
@@ -91,6 +99,13 @@
       if (!playing) return;
 
       arrows.forEach(a => a.x += a.dir * rounds[currentRound].speed);
+
+      // Check for missed arrows (passed center)
+      if (arrows.some(a => (a.dir === 1 && a.x > 215) || (a.dir === -1 && a.x < 185))) {
+        failRound();
+        return;
+      }
+
       arrows = arrows.filter(a => a.x > -20 && a.x < 420);
       frame++;
 
@@ -116,14 +131,29 @@
         currentRound++;
         if (currentRound < rounds.length) {
           document.getElementById("round").textContent = `Round ${currentRound + 1} / 3`;
-          arrows = [];
-          hits = 0;
-          total = 0;
-          playing = true;
+          resetRound();
         } else {
           endGame();
         }
       }, 1000);
+    }
+
+    function resetRound() {
+      arrows = [];
+      hits = 0;
+      total = 0;
+      frame = 0;
+      playing = true;
+    }
+
+    function failRound() {
+      playing = false;
+      typeText("errorMessage", "* Try again!", 40);
+      setTimeout(() => {
+        document.getElementById("errorMessage").textContent = "";
+        document.getElementById("errorMessage").style.display = "none";
+        resetRound();
+      }, 1500);
     }
 
     function endGame() {
@@ -136,6 +166,7 @@
     function typeText(id, text, speed = 50) {
       const el = document.getElementById(id);
       el.style.display = "block";
+      el.textContent = "";
       let i = 0;
       function type() {
         if (i < text.length) {
@@ -148,7 +179,7 @@
     }
 
     document.addEventListener("keydown", e => {
-      if (e.code === "Space") {
+      if (e.code === "Space" && playing) {
         const center = arrows.find(a => Math.abs(a.x - 200) < 15);
         if (center) {
           sound.currentTime = 0;
