--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
       min-height: 100vh;
       margin: 0;
     }
-    canvas {
-      image-rendering: pixelated;
-      background: #111;
-      display: block;
-      margin: 20px auto;
-      border: 3px solid white;
-    }
+   canvas {
+  image-rendering: pixelated;
+  background: #111;
+  display: block;
+  margin: 20px auto;
+  border: 3px solid white;
+  width: 100%;
+  max-width: 600px;
+}
     #instruction {
       font-size: 10px;
       margin-top: 10px;
