--- a/index.html
+++ b/index.html
@@ -4,74 +4,71 @@
   <meta charset="UTF-8" />
   <title>Signal Sync</title>
   <style>
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
       background: black;
       color: white;
       font-family: 'Press Start 2P', monospace;
+    }
+    body {
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-      margin: 0;
-      position: relative;
       overflow: hidden;
+      user-select: none;
+      flex-direction: column;
+      position: relative;
     }
     canvas {
       image-rendering: pixelated;
       background: #111;
-      display: none; /* hidden initially */
-      margin: 20px auto;
       border: 3px solid white;
+      margin-top: 20px;
+    }
+    #instruction, #round, #errorMessage, #finalMessage, #overlay {
+      text-align: center;
+      max-width: 80vw;
+      margin-top: 10px;
     }
     #instruction {
       font-size: 10px;
-      margin-top: 10px;
       color: #87cefa;
-      text-align: center;
-      display: none; /* hidden initially */
     }
     #round {
-      color: #ffeb3b;
       font-size: 10px;
-      margin-top: 20px;
-      display: none; /* hidden initially */
-    }
-    #finalMessage, #errorMessage {
-      display: none;
-      font-size: 12px;
-      margin-top: 30px;
-      max-width: 80%;
-      text-align: center;
-      white-space: pre-wrap;
-    }
-    #finalMessage {
       color: #ffeb3b;
+      margin-top: 20px;
     }
     #errorMessage {
+      font-size: 12px;
       color: #ff4d4d;
+    }
+    #finalMessage {
+      font-size: 12px;
+      color: #ffeb3b;
+      white-space: pre-wrap;
     }
     #overlay {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(255, 0, 0, 0.5);
-      pointer-events: none;
-      display: none;
-      z-index: 999;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0,0,0,0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+      user-select: none;
     }
     #startButton {
       background: #222;
       color: #fff;
       font-family: 'Press Start 2P', monospace;
-      font-size: 16px;
-      padding: 15px 30px;
+      font-size: 24px;
+      padding: 20px 60px;
       border: 3px solid white;
       cursor: pointer;
-      user-select: none;
-      border-radius: 8px;
+      border-radius: 12px;
       transition: background 0.3s ease;
     }
     #startButton:hover {
@@ -82,28 +79,29 @@
 </head>
 <body>
 
-  <button id="startButton">START</button>
-
   <canvas id="game" width="400" height="100"></canvas>
   <div id="round">Round 1 / 3</div>
   <div id="instruction">Press SPACE when the arrow hits the middle bar!</div>
   <div id="errorMessage"></div>
   <div id="finalMessage"></div>
-  <div id="overlay"></div>
+  <div id="overlay">
+    <button id="startButton">START</button>
+  </div>
 
   <audio id="hitSound" src="https://www.fesliyanstudios.com/play-mp3/387" preload="auto"></audio>
   <audio id="failSound" src="https://www.soundjay.com/button/beep-05.wav" preload="auto"></audio>
 
   <script>
     const startButton = document.getElementById('startButton');
+    const overlay = document.getElementById('overlay');
     const canvas = document.getElementById("game");
     const ctx = canvas.getContext("2d");
     const sound = document.getElementById("hitSound");
     const failSound = document.getElementById("failSound");
     const errorEl = document.getElementById("errorMessage");
-    const overlay = document.getElementById("overlay");
     const instructionEl = document.getElementById("instruction");
     const roundEl = document.getElementById("round");
+    const finalMessageEl = document.getElementById("finalMessage");
 
     const rounds = [
       { speed: 1.5, arrows: 5 },
@@ -116,7 +114,7 @@
     let frame = 0;
     let hits = 0;
     let total = 0;
-    let playing = false; // start disabled until user clicks start
+    let playing = false;
 
     function spawnArrow() {
       const side = Math.random() > 0.5 ? "left" : "right";
@@ -126,7 +124,7 @@
     function draw() {
       ctx.clearRect(0, 0, 400, 100);
       ctx.fillStyle = "white";
-      ctx.fillRect(195, 0, 10, 100); // Middle zone
+      ctx.fillRect(195, 0, 10, 100); // Middle bar
 
       arrows.forEach(a => {
         ctx.fillStyle = "cyan";
@@ -139,11 +137,11 @@
     }
 
     function update() {
-      if (!playing) return;
+      if (!playing) return; // arrows don't move before start
 
       arrows.forEach(a => a.x += a.dir * rounds[currentRound].speed);
 
-      // Check for missed arrows
+      // Miss detection
       if (arrows.some(a => (a.dir === 1 && a.x > 215) || (a.dir === -1 && a.x < 185))) {
         failRound();
         return;
@@ -203,9 +201,9 @@
     }
 
     function flashOverlay() {
-      overlay.style.display = "block";
+      overlay.style.backgroundColor = "rgba(255, 0, 0, 0.5)";
       setTimeout(() => {
-        overlay.style.display = "none";
+        overlay.style.backgroundColor = "rgba(0,0,0,0.8)";
       }, 200);
     }
 
@@ -231,17 +229,14 @@
       type();
     }
 
-    // Wait for start button click
+    // Start button click - hide overlay & start game
     startButton.addEventListener('click', () => {
-      startButton.style.display = 'none';
-      canvas.style.display = 'block';
-      instructionEl.style.display = 'block';
-      roundEl.style.display = 'block';
+      overlay.style.display = 'none';
       playing = true;
       loop();
     });
 
-    // Use spacebar to hit arrows, only if playing
+    // Space key for hitting arrows (only active after start)
     document.addEventListener("keydown", e => {
       if (e.code === "Space" && playing) {
         const center = arrows.find(a => Math.abs(a.x - 200) < 15);
@@ -253,6 +248,7 @@
         }
       }
     });
+
   </script>
 </body>
 </html>
