--- a/index.html
+++ b/index.html
@@ -7,81 +7,78 @@
     html, body {
       height: 100%;
       margin: 0;
+      padding: 0;
       background: black;
       color: white;
       font-family: 'Press Start 2P', monospace;
-    }
-    body {
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      overflow: hidden;
-      user-select: none;
-      flex-direction: column;
-      position: relative;
+      overflow: hidden; /* prevent scrolling before start */
     }
     canvas {
       image-rendering: pixelated;
       background: #111;
+      display: block;
+      margin: 20px auto;
       border: 3px solid white;
-      margin-top: 20px;
-    }
-    #instruction, #round, #errorMessage, #finalMessage, #overlay {
-      text-align: center;
-      max-width: 80vw;
-      margin-top: 10px;
     }
     #instruction {
       font-size: 10px;
+      margin-top: 10px;
       color: #87cefa;
+      text-align: center;
     }
     #round {
-      font-size: 10px;
       color: #ffeb3b;
+      font-size: 10px;
       margin-top: 20px;
     }
-    #errorMessage {
+    #finalMessage, #errorMessage {
+      display: none;
       font-size: 12px;
-      color: #ff4d4d;
-    }
-    #finalMessage {
-      font-size: 12px;
-      color: #ffeb3b;
+      margin-top: 30px;
+      max-width: 80%;
+      text-align: center;
       white-space: pre-wrap;
     }
+    #finalMessage {
+      color: #ffeb3b;
+    }
+    #errorMessage {
+      color: #ff4d4d;
+    }
     #overlay {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100vw; height: 100vh;
-    background: rgba(0,0,0,0.8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-    user-select: none;
-  }
-
-  #startButton {
-    background: #222;
-    color: #fff;
-    font-family: 'Press Start 2P', monospace;
-    font-size: 16px;
-    padding: 12px 40px;
-    border: 2px solid white;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: background 0.3s ease;
-    box-shadow: 0 0 6px #00ffff88;
-  }
-
-  #startButton:hover {
-    background: #444;
-  }
-</style>
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+      user-select: none;
+    }
+    #startButton {
+      background: #222;
+      border: 3px solid #87cefa;
+      color: #87cefa;
+      font-family: 'Press Start 2P', monospace;
+      font-size: 14px;
+      padding: 10px 25px;
+      cursor: pointer;
+      transition: background 0.3s, color 0.3s;
+    }
+    #startButton:hover {
+      background: #87cefa;
+      color: #222;
+    }
+  </style>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
 </head>
 <body>
-
   <canvas id="game" width="400" height="100"></canvas>
   <div id="round">Round 1 / 3</div>
   <div id="instruction">Press SPACE when the arrow hits the middle bar!</div>
@@ -95,16 +92,13 @@
   <audio id="failSound" src="https://www.soundjay.com/button/beep-05.wav" preload="auto"></audio>
 
   <script>
-    const startButton = document.getElementById('startButton');
-    const overlay = document.getElementById('overlay');
     const canvas = document.getElementById("game");
     const ctx = canvas.getContext("2d");
     const sound = document.getElementById("hitSound");
     const failSound = document.getElementById("failSound");
     const errorEl = document.getElementById("errorMessage");
-    const instructionEl = document.getElementById("instruction");
-    const roundEl = document.getElementById("round");
-    const finalMessageEl = document.getElementById("finalMessage");
+    const overlay = document.getElementById("overlay");
+    const startButton = document.getElementById("startButton");
 
     const rounds = [
       { speed: 1.5, arrows: 5 },
@@ -117,7 +111,7 @@
     let frame = 0;
     let hits = 0;
     let total = 0;
-    let playing = false;
+    let playing = false; // start false so arrows don't move before start
 
     function spawnArrow() {
       const side = Math.random() > 0.5 ? "left" : "right";
@@ -127,7 +121,7 @@
     function draw() {
       ctx.clearRect(0, 0, 400, 100);
       ctx.fillStyle = "white";
-      ctx.fillRect(195, 0, 10, 100); // Middle bar
+      ctx.fillRect(195, 0, 10, 100); // Middle zone
 
       arrows.forEach(a => {
         ctx.fillStyle = "cyan";
@@ -140,11 +134,11 @@
     }
 
     function update() {
-      if (!playing) return; // arrows don't move before start
+      if (!playing) return;
 
       arrows.forEach(a => a.x += a.dir * rounds[currentRound].speed);
 
-      // Miss detection
+      // Check for missed arrows
       if (arrows.some(a => (a.dir === 1 && a.x > 215) || (a.dir === -1 && a.x < 185))) {
         failRound();
         return;
@@ -174,7 +168,7 @@
       setTimeout(() => {
         currentRound++;
         if (currentRound < rounds.length) {
-          roundEl.textContent = `Round ${currentRound + 1} / 3`;
+          document.getElementById("round").textContent = `Round ${currentRound + 1} / 3`;
           resetRound();
         } else {
           endGame();
@@ -204,16 +198,18 @@
     }
 
     function flashOverlay() {
-      overlay.style.backgroundColor = "rgba(255, 0, 0, 0.5)";
+      overlay.style.background = "rgba(255, 0, 0, 0.5)";
+      overlay.style.display = "flex";
       setTimeout(() => {
-        overlay.style.backgroundColor = "rgba(0,0,0,0.8)";
+        overlay.style.background = "rgba(0, 0, 0, 0.8)";
+        overlay.style.display = "none";
       }, 200);
     }
 
     function endGame() {
       canvas.style.display = "none";
-      instructionEl.style.display = "none";
-      roundEl.style.display = "none";
+      document.getElementById("instruction").style.display = "none";
+      document.getElementById("round").style.display = "none";
       typeText("finalMessage", "* You’re finally in sync.\n* I'm here.");
     }
 
@@ -232,16 +228,9 @@
       type();
     }
 
-    // Start button click - hide overlay & start game
-    startButton.addEventListener('click', () => {
-      overlay.style.display = 'none';
-      playing = true;
-      loop();
-    });
-
-    // Space key for hitting arrows (only active after start)
     document.addEventListener("keydown", e => {
       if (e.code === "Space" && playing) {
+        e.preventDefault(); // prevent scroll on space
         const center = arrows.find(a => Math.abs(a.x - 200) < 15);
         if (center) {
           sound.currentTime = 0;
@@ -252,6 +241,12 @@
       }
     });
 
+    startButton.addEventListener("click", () => {
+      overlay.style.display = "none";
+      playing = true;
+    });
+
+    loop();
   </script>
 </body>
 </html>
