--- a/index.html
+++ b/index.html
@@ -214,11 +214,13 @@ function endGame() {
   canvas.style.display = "none";
   document.getElementById("instruction").style.display = "none";
   document.getElementById("round").style.display = "none";
-  typeText("finalMessage", "* You’re finally in sync.\n * I'm here.", 60, () => {
-    window.location.href = "#signalgamecorrect";
+  typeText("finalMessage", "* You’re finally in sync.\n* I'm here.", 60, () => {
+    // Wait a moment before redirecting
+    setTimeout(() => {
+      window.location.href = "#signalgamecorrect";
+    }, 800);
   });
 }
-
 
 function typeText(id, text, speed = 60, callback = null) {
   const el = document.getElementById(id);
@@ -231,11 +233,12 @@ function typeText(id, text, speed = 60, callback = null) {
       i++;
       setTimeout(type, text.charAt(i - 1) === " " ? speed / 2 : speed);
     } else if (callback) {
-      setTimeout(callback, 800); // wait a moment before redirect
+      callback();
     }
   }
   type();
 }
+
 
 
     document.addEventListener("keydown", e => {
