--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@ function endGame() {
   canvas.style.display = "none";
   document.getElementById("instruction").style.display = "none";
   document.getElementById("round").style.display = "none";
-  typeText("finalMessage", "* You’re finally in sync.\n* I'm here.", 60, () => {
-    // Wait a moment before redirecting
+  typeText("finalMessage", "* You’re finally in sync.\n * I'm here.", 60, () => {
     setTimeout(() => {
-      window.location.href = "#signalgamecorrect";
+      parent.location.hash = "signalgamecorrect";
     }, 800);
   });
 }
+
 
 function typeText(id, text, speed = 60, callback = null) {
   const el = document.getElementById(id);
