--- a/index.html
+++ b/index.html
@@ -214,12 +214,21 @@ function endGame() {
   canvas.style.display = "none";
   document.getElementById("instruction").style.display = "none";
   document.getElementById("round").style.display = "none";
-  typeText("finalMessage", "* You’re finally in sync.\n * Opening message...", 60, () => {
+
+  const finalMessage = document.getElementById("finalMessage");
+  finalMessage.style.opacity = "1";
+  finalMessage.style.transition = "opacity 1s ease";
+
+  typeText("finalMessage", "* You’re finally in sync.\n\n* Opening message...", 60, () => {
     setTimeout(() => {
-      parent.location.hash = "#signalgamecorrect";
-    }, 800);
+      finalMessage.style.opacity = "0";
+      setTimeout(() => {
+        window.top.location.href = "https://frdffsdx.carrd.co/#signalgamecorrect";
+      }, 1000); // match the fade-out duration
+    }, 1000); // pause before fade starts
   });
 }
+
 
 
 function typeText(id, text, speed = 60, callback = null) {
