--- a/index.html
+++ b/index.html
@@ -219,15 +219,15 @@ function endGame() {
   finalMessage.style.opacity = "1";
   finalMessage.style.transition = "opacity 1s ease";
 
-  typeText("finalMessage", "* You’re finally in sync.\n\n* Opening message...", 60, () => {
+typeText("finalMessage", "* You’re finally in sync!\n* Opening message...", 60, () => {
+  setTimeout(() => {
+    finalMessage.style.opacity = "0";
     setTimeout(() => {
-      finalMessage.style.opacity = "0";
-      setTimeout(() => {
-        window.top.location.href = "https://frdffsdx.carrd.co/#signalgamecorrect";
-      }, 1000); // match the fade-out duration
-    }, 1000); // pause before fade starts
-  });
-}
+      window.top.location.href = "https://frdffsdx.carrd.co/#signalgamecorrect";
+    }, 1000); // match the fade-out duration
+  }, 1000); // pause before fade starts
+});
+
 
 
 
