--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
       font-size: 10px;
       margin-top: 20px;
     }
-    #finalMessage, #errorMessage {
-      display: none;
-      font-size: 12px;
-      margin-top: 30px;
-      max-width: 80%;
-      text-align: center;
-      white-space: pre-wrap;
-    }
+
+    #finalMessage,  #errorMessage {
+  display: none;
+  font-size: 10px;
+  margin-top: 30px;
+  max-width: 80%;
+  text-align: center;
+  white-space: pre-wrap;
+  color: #ffeb3b;
+  line-height: 1.8; /* <-- Add this */
+}
     #finalMessage {
       color: #ffeb3b;
     }
