--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ function endGame() {
   finalMessage.style.opacity = "1";
   finalMessage.style.transition = "opacity 1s ease";
 
-  typeText("finalMessage", "* You’re finally in sync!\n* Opening message...", 60, () => {
+  typeText("finalMessage", "You’re finally in sync!", 60, () => {
     setTimeout(() => {
       finalMessage.style.opacity = "0";
       setTimeout(() => {
