--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function endGame() {
     setTimeout(() => {
       finalMessage.style.opacity = "0";
       setTimeout(() => {
-        window.top.location.href = "https://frdffsdx.carrd.co/#signalgamecorrect";
+        window.top.location.href = "https://estellearia.github.io/aria-messages/fragment1.html";
       }, 1000); // match the fade-out duration
     }, 1000); // pause before fade starts
   });
