--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      background: #131319;
+      background: #111;
       color: #fff;
       font-family: 'Press Start 2P', monospace;
       width: 100vw;
       min-height: 100vh;
       overflow: hidden;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
     }
     #centerer {
       min-height: 100vh;
@@ -28,13 +29,13 @@
       align-items: center;
     }
     #uiContainer {
-      background: #181828;
-      border: 4px solid #fff;
-      border-radius: 18px;
-      box-shadow: 0 0 24px #222, 0 0 0 4px #111;
-      padding: 34px 30px 34px 30px;
-      min-width: 340px;
-      max-width: 96vw;
+      background: #181818;
+      border: 3px solid #fff;
+      border-radius: 6px;
+      box-shadow: 0 0 0 6px #000;
+      padding: 22px 18px 24px 18px;
+      min-width: 300px;
+      max-width: 97vw;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -43,87 +44,85 @@
       image-rendering: pixelated;
       background: #111;
       display: block;
-      margin: 20px auto 6px auto;
-      border: 3px solid #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 8px #1e1e32;
+      margin: 18px auto 6px auto;
+      border: 2px solid #fff;
+      border-radius: 3px;
+      box-shadow: 0 0 6px #000;
     }
     #round {
-      color: #ffeb3b;
-      font-size: 12px;
-      margin-top: 0;
+      color: #ffe066;
+      font-size: 10px;
       margin-bottom: 10px;
       text-align: center;
-      letter-spacing: 1.5px;
-      text-shadow: 0 0 3px #333;
+      text-shadow: 0 0 2px #222;
+      letter-spacing: 0.5px;
     }
     #instruction {
-      font-size: 11px;
+      font-size: 9px;
       color: #87cefa;
       text-align: center;
-      margin-bottom: 14px;
+      margin-bottom: 8px;
       margin-top: 2px;
-      letter-spacing: 0.6px;
-      text-shadow: 0 1px 0 #222;
+      letter-spacing: 0.3px;
+      text-shadow: 0 1px 0 #111;
     }
     #errorMessage, #finalMessage {
       display: none;
-      font-size: 12px;
-      margin-top: 18px;
+      font-size: 10px;
+      margin-top: 16px;
       max-width: 82%;
       text-align: center;
       white-space: pre-wrap;
-      color: #ffeb3b;
+      color: #ffe066;
       line-height: 2;
       font-family: 'Press Start 2P', monospace;
-      letter-spacing: 0.08em;
+      letter-spacing: 0.06em;
     }
     #errorMessage {
       color: #ff4d4d;
       text-shadow: 0 0 1px #222;
     }
     #finalMessage {
-      color: #ffeb3b;
-      text-shadow: 0 0 2px #000, 0 0 8px #ffeb3b44;
+      color: #ffe066;
+      text-shadow: 0 0 2px #000, 0 0 8px #ffe06644;
     }
     #overlay {
       position: fixed;
       top: 0; left: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.85);
+      background: rgba(0, 0, 0, 0.95);
       display: flex;
       justify-content: center;
       align-items: center;
       z-index: 1000;
       user-select: none;
-      flex-direction: column;
       pointer-events: auto;
       transition: background 0.3s;
     }
     #startButton {
-      background: #191933;
-      border: 3px solid #87cefa;
-      color: #87cefa;
+      background: #111;
+      border: 2px solid #fff;
+      color: #fff;
       font-family: 'Press Start 2P', monospace;
-      font-size: 18px;
-      padding: 18px 50px;
+      font-size: 13px;
+      padding: 8px 25px;
       cursor: pointer;
-      border-radius: 10px;
+      border-radius: 0;
       transition: background 0.2s, color 0.2s;
-      letter-spacing: 0.12em;
-      text-shadow: 0 1px 0 #191933;
-      display: block;
       margin: 0 auto;
-      box-shadow: 0 0 16px #222;
+      box-shadow: 0 0 0 3px #000;
+      display: block;
+      letter-spacing: 0.05em;
+      text-shadow: 0 1px 0 #000;
     }
     #startButton:hover {
-      background: #87cefa;
-      color: #191933;
+      background: #fff;
+      color: #111;
     }
     @media (max-width: 520px) {
-      #uiContainer { padding: 14vw 2vw 14vw 2vw; min-width: 0; max-width: 99vw;}
-      canvas { width: 94vw !important; min-width: unset; }
+      #uiContainer { padding: 8vw 2vw 8vw 2vw; min-width: 0; max-width: 99vw;}
+      canvas { width: 92vw !important; min-width: unset; }
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
@@ -269,7 +268,7 @@
       overlay.style.background = "rgba(255, 0, 0, 0.23)";
       overlay.style.display = "flex";
       setTimeout(() => {
-        overlay.style.background = "rgba(0, 0, 0, 0.85)";
+        overlay.style.background = "rgba(0, 0, 0, 0.95)";
         overlay.style.display = "none";
       }, 200);
     }
