--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      position: relative;
     }
     canvas {
       image-rendering: pixelated;
@@ -120,9 +121,30 @@
       background: #fff;
       color: #111;
     }
+    #skipBtn {
+      position: absolute;
+      top: 10px;
+      right: 12px;
+      background: #111;
+      border: 2px solid #fff;
+      color: #fff;
+      font-family: 'Press Start 2P', monospace;
+      font-size: 10px;
+      padding: 4px 12px;
+      cursor: pointer;
+      border-radius: 0;
+      transition: background 0.2s, color 0.2s;
+      z-index: 2000;
+      text-shadow: 0 1px 0 #000;
+    }
+    #skipBtn:hover {
+      background: #fff;
+      color: #111;
+    }
     @media (max-width: 520px) {
       #uiContainer { padding: 8vw 2vw 8vw 2vw; min-width: 0; max-width: 99vw;}
       canvas { width: 92vw !important; min-width: unset; }
+      #skipBtn { top: 6px; right: 6px; font-size: 9px; padding: 3px 9px; }
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
@@ -130,6 +152,7 @@
 <body>
   <div id="centerer">
     <div id="uiContainer">
+      <button id="skipBtn" title="Skip the game">Skip</button>
       <div id="round">Round 1 / 4</div>
       <div id="instruction">Press SPACE when the arrow hits the middle bar!</div>
       <canvas id="game" width="400" height="100"></canvas>
@@ -152,6 +175,7 @@
     const startButton = document.getElementById("startButton");
     const roundEl = document.getElementById("round");
     const instructionEl = document.getElementById("instruction");
+    const skipBtn = document.getElementById("skipBtn");
 
     // More difficult rounds: faster speed, more arrows, smaller "hit window"
     const rounds = [
@@ -325,6 +349,10 @@
     startButton.addEventListener("click", () => {
       overlay.style.display = "none";
       playing = true;
+    });
+
+    skipBtn.addEventListener("click", () => {
+      window.top.location.href = "https://estellearia.github.io/aria-messages/fragment4.html";
     });
 
     loop();
